Fixed footer functionality
- Functions as absolute footer on mobile
- On desktop, attaches to bottom of content to remove whitespace between footer and page content

--- a/client/WasteNotCSULB/src/app/app.component.scss
+++ b/client/WasteNotCSULB/src/app/app.component.scss
@@ -50,7 +50,11 @@
 #logo {
   width: 250px;
 }
-
+#wrap{
+  max-width: 900px;
+  margin: 0 auto;
+  position: relative;
+}
 .nav-item a {
   color: black;
 }
@@ -68,5 +72,14 @@ position: absolute;
   padding-bottom: 100px;
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
+
+@media (min-width: 900px) {
+  .footer-bar {
+  max-width: 900px;
+  margin: 0 auto;
+  position: relative;
+  }
+}
+
 
 
